# labrat-gtk

./: Cargo.toml  README.md
po/: labrat.pot
src/: bridge.rs  lib.rs  ptr.rs  secrets.rs  ui.rs  util.rs  widgets.rs
src/bridge/: errors.rs
src/secrets/: fake.rs  linux.rs
src/ui/: home.rs  root.rs  submissions.rs
src/widgets/: fill_image.rs  page_list_view.rs
