[package]
name = "labrat-gtk"
version = "0.1.0"
authors = ["Vypo Mouse <vypo@vypo.dev>"]
edition = "2018"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
gettext-system = ["gettext-rs/gettext-system"]

[dependencies]
gettext-rs = "0.6.0"
tokio = { version = "1.3.0", features = [ "macros", "sync" ] }
once_cell = "1.7.2"
reqwest = "0.11.1"
snafu = "0.6.10"
futures-channel = "0.3.13"
directories = "3.0.1"

[dependencies.libadwaita]
git = "https://gitlab.gnome.org/bilelmoussaoui/libadwaita-rs"

[dependencies.cairo-rs]
git = "https://github.com/gtk-rs/gtk-rs"

[dependencies.gio]
git = "https://github.com/gtk-rs/gtk-rs"

[dependencies.labrat]
git = "https://github.com/Vypo/labrat"

[dependencies.gdk]
git = "https://github.com/gtk-rs/gtk4-rs"
package = "gdk4"

[dependencies.gtk]
git = "https://github.com/gtk-rs/gtk4-rs"
package = "gtk4"

[dependencies.gdk-pixbuf]
git = "https://github.com/gtk-rs/gtk-rs"

[dependencies.glib]
git = "https://github.com/gtk-rs/gtk-rs"

[dependencies.soup]
git = "https://gitlab.gnome.org/vypo/soup-rs"
branch = "updates"

[target.'cfg(target_os = "linux")'.dependencies]
secret-service = "2.0.1"
